# image_detection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  verify_env.py
.github/workflows/: code_quality_lenient.yml
backend/cpp/: CMakeLists.txt  Dockerfile  README.md
backend/cpp/include/: .gitkeep  Int8Calibrator.hpp  ObjectDetector.hpp  cuda_utils.hpp  engine.hpp  logging.hpp  utils.hpp
backend/cpp/src/: .gitkeep  Int8Calibrator.cpp  ObjectDetector.cpp  Postprocess.cu  TestEnv.cpp  bindings.cpp  engine.cpp  main  main.cpp  preprocess.cu
backend/cpp/src/cuda/: postprocess.cu
backend/cpp/src/data/models/model/: best_int8_batch.engine.calib
backend/cpp/src/data/models/model2/: best_int8_batch.engine.calib
backend/cpp/src/data/models/model4/: best_int8_batch.engine.calib
backend/cpp/src/data/models/model6/: best_int8_batch.engine.calib
backend/cpp/src/data/models/model8/: best_int8_batch.engine.calib
backend/python/: .dockerignore  Dockerfile  README.md  app.db  feedback.db  pyproject.toml
backend/python/src/image_detection/: __init__.py
backend/python/src/image_detection/core/: __init__.py  engine.py
backend/python/src/image_detection/data/: inflect.csv  model_mapping.csv  split_dataset.py
backend/python/src/image_detection/training/: __init__.py  yolo_train.py
backend/python/src/image_detection/utils/: verify_env.py
backend/python/src/image_detection/web/: api.py  app.py
backend/python/tests/: test_basic.py
doc/: project.md
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: History.vue  LandingPage.vue  Lightbox.vue  Login.vue  Toast.vue
