[project]
name = "image-detection"
version = "0.1.0"
description = "电力巡检图像智能检测系统 - Python后端"
readme = "README.md"
requires-python = ">=3.10, <3.11"

dependencies = [
    "fastapi",
    "gradio",
    "uvicorn",
    "ultralytics",
    "onnx",
    "onnxsim",
    "netron",
    "opencv-python",
    "matplotlib",
    "pandas",
    "pybind11",
    "torch",
    "torchvision",
    "torchaudio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]
